# mlops_ehaa

./: Makefile  README.md  data.dvc  data.py  main.py  model.py  pyproject.toml  requirements.txt  trainer.dockerfile
.dvc/: config
.github/workflows/: tests.yml
data/raw/: rand_img.npy
docs/: mkdocs.yaml
docs/source/: index.md
mlops_ehaa/: __init__.py  main.py  predict_model.py  train_model.py
mlops_ehaa/data/: dataload.py  make_dataset.py
mlops_ehaa/models/: model.py
model/: model_0.pth
models/: checkpoint.pth
tests/: test_data.py  test_model.py
