[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops_ehaa"
version = "0.0.1"
description = "personal repo for mlops course"
authors = [
  { name = "ehaa", email = "your@email.com" },
]

readme = "README.md"
requires-python = ">=3.10.12"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["mlops_ehaa"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
select = ["I"]